set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 ")


add_executable(A yahoo-procon2019-qual/A.cpp)
add_executable(B yahoo-procon2019-qual/B.cpp)
add_executable(C yahoo-procon2019-qual/C.cpp)
add_executable(D yahoo-procon2019-qual/D.cpp)



add_executable(G dp/G.cpp)
add_executable(E aising2019/E.cpp)

add_executable(F dp/F.cpp)

add_executable(H dp/H.cpp)

add_executable(I dp/I.cpp)

add_executable(J dp/J.cpp)
add_executable(K dp/K.cpp)
add_executable(L dp/L.cpp)

add_executable(N dp/N.cpp)

add_executable(O dp/O.cpp)
add_executable(P dp/P.cpp)
add_executable(Q dp/Q.cpp)
add_executable(R dp/R.cpp)
add_executable(S dp/S.cpp)
add_executable(T dp/T.cpp)
