set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 ")


add_executable(A abc119/A.cpp)
add_executable(B abc119/B.cpp)
add_executable(C abc119/C.cpp)
add_executable(D abc119/D.cpp)



add_executable(G dp/G.cpp)
add_executable(E yahoo-procon2019-qual/E.cpp)

add_executable(F yahoo-procon2019-qual/F.cpp)

add_executable(H dp/H.cpp)

add_executable(I dp/I.cpp)

add_executable(J dp/J.cpp)
add_executable(K dp/K.cpp)
add_executable(L dp/L.cpp)

add_executable(N dp/N.cpp)

add_executable(O dp/O.cpp)
add_executable(P dp/P.cpp)
add_executable(Q dp/Q.cpp)
add_executable(R dp/R.cpp)
add_executable(S dp/S.cpp)
add_executable(T dp/T.cpp)

add_executable(D_tmp code-festival-2018-final-open/D_tmp.cpp)
